<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/condIcon"
        android:contentDescription="@string/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/condDescr"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing_small"
        android:layout_marginLeft="@dimen/horizontal_spacing_big"
        android:layout_marginStart="@dimen/horizontal_spacing_big"
        android:layout_toRightOf="@id/condIcon"
        android:layout_toEndOf="@id/condIcon"
        />

    <TextView
        android:id="@+id/temp"
        style="@style/tempStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_spacing_big"
        android:layout_marginStart="@dimen/horizontal_spacing_big"
        android:layout_below="@id/condDescr"
        android:layout_toRightOf="@id/condIcon"
        android:layout_toEndOf="@id/condIcon"
        />

    <TextView
        android:id="@+id/pressLab"
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/condIcon"
        android:text="@string/pressure"
        android:layout_marginTop="@dimen/vertical_spacing_big" />

    <TextView
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pressLab"
        android:layout_toRightOf="@id/pressLab"
        android:layout_toEndOf="@id/pressLab"
        style="@style/valData"/>

    <TextView
        android:id="@+id/humLab"
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/pressLab"
        android:text="@string/humidity"
        android:layout_marginTop="@dimen/vertical_spacing" />

    <TextView
        android:id="@+id/hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/humLab"
        android:layout_toRightOf="@id/humLab"
        android:layout_toEndOf="@id/humLab"
        style="@style/valData"/>

    <TextView
        android:id="@+id/windLab"
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/humLab"
        android:text="@string/wind"
        android:layout_marginTop="@dimen/vertical_spacing" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_toRightOf="@id/windLab"
        android:layout_toEndOf="@id/windLab"
        style="@style/valData" />

    <TextView
        android:id="@+id/windDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_toRightOf="@id/windSpeed"
        android:layout_toEndOf="@id/windSpeed"
        android:layout_marginLeft="@dimen/horizontal_spacing"
        android:layout_marginStart="@dimen/horizontal_spacing"
        style="@style/valData"/>

    <TextView
        android:id="@+id/sunriseLab"
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/windLab"
        android:text="@string/sunrise"
        android:layout_marginTop="@dimen/vertical_spacing_big" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/sunriseLab"
        android:layout_toRightOf="@id/sunriseLab"
        android:layout_toEndOf="@id/sunriseLab"
        style="@style/valData"/>

    <TextView
        android:id="@+id/sunsetLab"
        android:layout_width="@dimen/weather_label_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/sunriseLab"
        android:text="@string/sunset"
        android:layout_marginTop="@dimen/vertical_spacing" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/sunsetLab"
        android:layout_toRightOf="@id/sunsetLab"
        android:layout_toEndOf="@id/sunsetLab"
        style="@style/valData"/>

</RelativeLayout>